# copr-tool

./: .stack-all  README.md  cabal.project  copr-tool.cabal  stack-lts14.yaml  stack-lts18.yaml  stack.yaml
src/: Main.hs
