name:                copr-tool
version:             0.1.0
synopsis:            One line summary
description:
        A CLI tool to query the Fedora Copr buildsystem.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2022-2024  Jens Petersen <juhpetersen@gmail.com>
category:            Utilities
homepage:            https://github.com/juhp/copr-tool
bug-reports:         https://github.com/juhp/copr-tool/issues
build-type:          Simple
extra-doc-files:     README.md
--                       ChangeLog.md
cabal-version:       2.0
tested-with:         GHC == 8.6.5
                      || == 8.8.4
                      || == 8.10.7
                      || == 9.0.2
                      || == 9.2.8
                      || == 9.4.8
                      || == 9.6.4
                      || == 9.8.2

source-repository head
  type:                git
  location:            https://github.com/juhp/copr-tool.git

executable copr-tool
  main-is:             Main.hs
  other-modules:       Paths_copr_tool
  hs-source-dirs:      src
  build-depends:       base < 5,
                       aeson,
                       bytestring,
                       copr-api >= 0.2,
                       extra,
                       http-directory >= 0.1.10,
                       simple-cmd,
                       simple-cmd-args,
                       text,
                       time,
                       unordered-containers,
                       yaml
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
